@@ -1,3 +1,7 @@
+* Tue May 08 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.3-0
+- Ensure that the default VNC sessions set the IPv4 flag
+- Ensure that the default VNC sessions set the banner to /dev/null
+
 * Thu Jul 06 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.2-0
 - Confine puppet version in metadata.json
 
